Archive2/aa/6f6a19b68003ad/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:55:1: error: invalid use of template-name ‘SessionWindow’ without an argument list
 SessionWindow& SessionWindow<T>::getInstance()
 ^
main.cpp:81:6: error: ‘template<class T> class SessionWindow’ used without template parameters
 void SessionWindow::addSession(T c){
      ^
main.cpp:81:32: error: variable or field ‘addSession’ declared void
 void SessionWindow::addSession(T c){
                                ^
main.cpp:81:32: error: ‘T’ was not declared in this scope
